refactore auth flow to keep refresh token, dockerfile to run in docker